
namespace LHC.Globals 
{
    public static class Constants 
    {
        
        public const string COOKINGPOT_COOKEDFOOD_SOCKET = "SKT_LerpTo_AfterCooked";
        public const string SHOP_ENTRY_SOCKET = "Shop Entry";
        public const string SHOP_ENTRY_SOCKET_DEBUG = "SKT_Shop_Entry_Debug";
        public const string ORDERING_ZONE_SOCKET = "SKT_Ordering_Food_Location";
        public const string BIRDS_FLYING_ZONE = "Birds_Flying_Zone";

        public const string HIP_RAYCAST_TRANSFORM = "SKT_Sitting_Raycast";

        /// =========================== Animation variables ============================
        public const string PICKUP_ANIMATION_TRIGGER_CONDITION = "hasPickedUp";
        public const string SITTING_ANIMATION_TRIGGER_CONDITION = "isSitting";
        public const string EATING_ANIMATION_TRIGGER_CONDITION = "isEating";
        public const string ANGRY_ANIMATION_TRIGGER_CONDITION = "isAngry";

        public const int BASE_ANIMATION_LAYER = 0;
        public const int PICKUP_ANIMATION_LAYER = 1;
        public const int EATING_ANIMATION_LAYER = 2;

    }
}